--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@
 body {
   font-family: "AirbnbC", sans-serif;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
